--- a/WebSite/Inicio/style.css
+++ b/WebSite/Inicio/style.css
@@ -7,17 +7,104 @@
 
 body {
     background: rgb(54, 54, 54);
+    overflow-x: hidden;
+}
+header {
+    background: #646464;
+    width: 100vw;
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    min-height: 72px;
+    padding: 10px;
+}
+
+.login-btns-wrapper a {
+    text-decoration: none;
+    color: white;
+    padding: 7px;
+    margin: 0px;
+    font-size: 12px;
 }
 
 .navbar {
-    width: 100%;
-    height: 52px;
-    margin: auto;
-    padding: 20px 20px;
+    display: flex;
+}
+
+.navbar div {
+    margin: 0 30px;
+}
+.navbar {
+    padding-top: 10px;
+}
+.navbar>img {
+    object-fit: contain;
+    width: 29px;
+    margin-left: 1vw;
+}
+
+.navbar div a{
+    text-decoration: none;
+    color: white;
+    padding: 7px;
+    margin: 0px;
+    font-size: 12px;
+}
+
+.navbar__pagina-principal
+{
     display: flex;
     align-items: center;
-    justify-content: space-between;
-    background: #646464;
+    flex-direction: column;
+
+}
+.navbar__pagina-principal img {
+    margin: auto;
+}
+.navbar__info
+{
+    display: flex;
+    align-items: center;
+    flex-direction: column;
+
+}
+.navbar__info img {
+    margin: auto;
+}
+.navbar__historial
+{
+    display: flex;
+    align-items: center;
+    flex-direction: column;
+
+}
+.navbar__historial img {
+    margin: auto;
+}
+.navbar__camara
+{
+    display: flex;
+    align-items: center;
+    flex-direction: column;
+
+}
+.navbar__camara img {
+    margin: auto;
+}
+
+.login-btns-wrapper>a {
+    font-size: 15px;
+}
+.login-btn {
+    background-color: hsl(0, 0%, 15%);
+    border-radius: 100px;
+    justify-content: center;
+    align-items: center;
+    gap: 10px;
+}
+
+.login-btns-wrapper{
+margin-right: 3vw;
 }
 
 .brand-font {
@@ -27,20 +114,59 @@ body {
     color: white
 }
 
-.navbar1 {
-    height: 30px;
-    padding: 20px 0;
+.basic-info{
+    display: flex;
     justify-content: center;
-    background: #4A4A4A;
+    align-items: center;
+    text-align:center;
 }
 
-.navbar1 ul li {
-    list-style: none;
-    display: inline-block;
-    margin: 0 10vw;
+titulo{
+    font-family: Montserrat;
+    font-style: normal;
+    font-weight: 10;
+    line-height: normal;
+    font-size: 39px;
+    color:#20ACDC;
 }
 
-.navbar1 ul li a {
-    text-decoration: none;
+.basic-info>titulo{
+    display: flex;
+    margin-left: 0px;
+}
+
+subtitulo{
+    color: #1F8BB0;
+}
+
+pregunta{
+    font-size: 30px;
+    color: #1F8BB0;
+    padding-bottom: 300px;
+}
+
+texto{
+    font-size: 100%;
+    display: flex;
     color: white;
+    margin-top: 2%; 
+    justify-content: center;
+}
+
+texto1{
+    font-size: 100%;
+    display: flex;
+    margin-right: 10%;
+    color: white;
+}
+
+container{
+    display: flex;
+    margin-left: 10%;
+    padding-bottom: 30px;
+
+}
+
+imagen{
+    margin-right: 10%;
 }
