Acomodo login-page, cambios en Historial (menu de opciones finalizado)
Falta conectar con la base de datos y averiguar como hacer para crear nuevos registros con la información que llega de la base de datos

--- a/WebSite/Inicio/style.css
+++ b/WebSite/Inicio/style.css
@@ -16,6 +16,7 @@ header {
     align-items: center;
     padding: 10px 50px;
     font-family: 'Shippori Antique', sans-serif;
+    position: fixed;
 }
 
 .navbar {
@@ -114,6 +115,22 @@ br{
     padding: 3px 12px 6px 12px;
     gap: 10px;
     width: 130px;
+    height: 34px;
+}
+
+.login-btn:hover{
+    background-color: #707070;
+}
+
+.register-btn:hover{
+    background-color: #707070;
+    border-radius: 100px;
+    justify-content: center;
+    align-items: center;
+    display: inline-flex;
+    padding: 3px 8px 6px 8px;
+    gap: 10px;
+    width: 100px;
     height: 34px;
 }
 
