--- a/WebSite/Historial/style.css
+++ b/WebSite/Historial/style.css
@@ -16,6 +16,7 @@ header {
     align-items: center;
     padding: 10px 50px;
     font-family: 'Shippori Antique', sans-serif;
+    position: fixed;
 }
 
 .navbar {
@@ -97,24 +98,12 @@ br{
     flex-direction: column;
 }
 
-.login-btns-wrapper a {
-    text-decoration: none;
-    color: white;
-    padding: 14px;
-    margin: 0px;
-    font-size: 14px;
-}
-
-.login-btn {
-    background-color: #252525;
-    border-radius: 100px;
-    justify-content: center;
-    align-items: center;
-    display: inline-flex;
-    padding: 3px 12px 6px 12px;
-    gap: 10px;
-    width: 130px;
-    height: 34px;
+.perfil{
+    width: 40px;
+    height: 40px;
+    display: flex;
+    background-color: blue;
+    border-radius: 100%;
 }
 
 .pagina{
@@ -176,8 +165,91 @@ br{
     max-width: 100%;
     height: 2px;
     border-radius: 5px;
-    background-color: #3E3E3E;
+    background-color: #1d89aa;
     margin-top: 3px;
+}
+
+.aaaaaaaaaaaaaaaaaaaaaaaaaa{
+    display: flex;
+    height: 5000px;
+    width: 10px;
+    justify-content: center;
+    align-items: center;
+}
+
+.historial__registro__opciones__boton {
+    background-color: inherit;
+    cursor: pointer;
+    border: none;
+    appearance: none;
+    flex-direction: column;
+    max-width: 40px;
+    max-height: 16px;
+    pointer-events: auto;
+  }
+  
+  .historial__registro__opciones__boton:hover, .historial__registro__opciones__boton:active {
+    background-color: #8b8b8b;
+    border-radius: 5px;
+    justify-content: center;
+    align-items: center;
+    /* position: relative; */
+  }
+
+
+.input {
+    display: flex;
+    flex-direction: column;
+    width: 200px;
+    background-color: #242424;
+    justify-content: center;
+    border-radius: 5px;
+    opacity: 0;
+    position: absolute;
+  }
+  
+.value {
+background-color: transparent;
+border: none;
+padding: 10px;
+color: white;
+display: flex;
+position: relative;
+gap: 5px;
+cursor: pointer;
+border-radius: 4px;
+}
+
+.value:not(:active):hover,
+.value:focus {
+background-color: #515151;
+}
+
+.value:focus,
+.value:active {
+background-color: #363b41;
+outline: none;
+}
+
+.value::before {
+content: "";
+position: absolute;
+top: 5px;
+left: -10px;
+width: 5px;
+height: 80%;
+background-color: #e2e2e2;
+border-radius: 5px;
+opacity: 0;
+}
+
+.value:focus::before,
+.value:active::before {
+opacity: 1;
+}
+
+.value img {
+width: 15px
 }
 
 
@@ -186,68 +258,55 @@ br{
 
 
 
+.footer{
+    height: 241px;
+    width: 100vw;
+    background-color: #0C1B31;
+    display: flex;
+    flex-direction: row;
+    padding: 41px 100px 41px 100px;
+    justify-content: space-between;
+}
 
+.footer__links{
+    color: #FFF;
+    font-family: Montserrat;
+    font-size: 20spx;
+    font-style: normal;
+    font-weight: 500;
+    line-height: normal;
+    justify-content: center;
+    align-items: center;
+    text-align: center;
+    display: flex;
+    text-decoration: underline;
+}
 
-.input {
+.footer__links__home-page{
+    margin: 0 10px 0 10px;
+}.footer__links__informacion{
+    margin: 0 10px 0 10px;
+}.footer__links__historial{
+    margin: 0 10px 0 10px;
+}.footer__links__camara{
+    margin: 0 10px 0 10px;
+}
+
+.footer__contactos{
     display: flex;
     flex-direction: column;
-    width: 200px;
-    background-color: #0D1117;
     justify-content: center;
-    border-radius: 5px
-  }
-  
-  .value {
-    background-color: transparent;
-    border: none;
-    padding: 10px;
-    color: white;
-    display: flex;
-    position: relative;
-    gap: 5px;
-    cursor: pointer;
-    border-radius: 4px;
-  }
-  
-  .value:not(:active):hover,
-  .value:focus {
-    background-color: #21262C;
-  }
-  
-  .value:focus,
-  .value:active {
-    background-color: #1A1F24;
-    outline: none;
-  }
-  
-  .value::before {
-    content: "";
-    position: absolute;
-    top: 5px;
-    left: -10px;
-    width: 5px;
-    height: 80%;
-    background-color: #2F81F7;
-    border-radius: 5px;
-    opacity: 0;
-  }
-  
-  .value:focus::before,
-  .value:active::before {
-    opacity: 1;
-  }
-  
-  .value img {
-    width: 15px
-  }
+}
 
-
-
-
-
-
-
-
+.footer__contactos__texto{
+    color: #FFF;
+    font-family: Montserrat;
+    font-size: 22px;
+    font-style: normal;
+    font-weight: 500;
+    line-height: normal;
+    margin-bottom: 8px;
+}
 
 
 .titulo{
