--- a/WebSite/Login-Page/style.css
+++ b/WebSite/Login-Page/style.css
@@ -2,7 +2,7 @@
     padding: 0;
     margin: 0;
     box-sizing: border-box;
-    font-family: 'Shippori Antique', sans-serif;
+    font-family: 'Montserat', sans-serif;
 }
 
 body {
@@ -31,26 +31,29 @@ body {
     background: #A6A6A6;
     border-radius: 12px;
     box-shadow: -4px 4px 4px 0px rgba(0, 0, 0, 0.25); /* Parametros (son con respecto al objeto): Posicion Horizontal | Posicion Vertical | Difuminado | Expansion */
+    justify-content: center;
 }
 .login-form__image {
     width: 45px;
     height: 56px;
-    margin-top: 17px;
     filter: drop-shadow(0px 4px 1px rgba(0, 0, 0, 0.25));
+    margin-top: 15px;
 }
 
 .login-form__h2 {
     letter-spacing: 0.5px;
-    margin-top: 27px;
+    margin-top: 16px;
 }
 
 .login-form__p {
-    width: 260px;
-    height: 46px;
-    font-size: 16px;
+    width: auto;
+    height: auto;
+    font-size: 14px;
     font-weight: 400;
     letter-spacing: 0.8px;
-    margin: 10px;
+    margin-top: 10px;
+    margin-bottom: 15px;
+    color: rgb(231, 231, 231);
 }
 
 .login-form__text-input {
@@ -58,17 +61,17 @@ body {
     border: 4px solid #636363;
     background: #D9D9D9;
     box-shadow: -4px 4px 4px 0px rgba(0, 0, 0, 0.25);
-    margin-top: 30px;
+    margin-top: 23px;
     width: 338px;
     height: 67px;
     padding: 0 30px;
     padding-top: 1px;
-    font-size: 20px;
+    font-size: 18px;
     color: #707070;
 }
 
 .login-form__text-input::placeholder {
-    font-size: 24px;
+    font-size: 18px;
     color: #969696;
     font-weight: 400;
     letter-spacing: 1.2px;
@@ -82,11 +85,12 @@ body {
 }
 
 .login-form__forgot-password {
-    color: #0EA0CE;
+    color: #0095c2;
     text-align: start;
     min-width: 75%;
     text-decoration: none;
     margin-top: 8px;
+    margin-bottom: 10px;
 }
 
 .login-form__forgot-password:hover {
