--- a/WebSite/Register-Page/style.css
+++ b/WebSite/Register-Page/style.css
@@ -11,6 +11,7 @@ body {
             linear-gradient(180deg, #404C5C, rgba(255,0,0,0) 100%);
     display: flex;
     min-height: 100vh;
+    padding: 50px;
 }
 
 .brand-font {
@@ -21,12 +22,12 @@ body {
 }
 
 .login-form {
+    display: flex;
     width: 451px;
-    height: 503px;
+    height: auto;
     margin: auto;
     align-items: center;
     text-align: center;
-    display: flex;
     flex-direction: column;
     background: #A6A6A6;
     border-radius: 12px;
@@ -46,7 +47,7 @@ body {
 }
 
 .login-form__p {
-    width: auto;
+    width: 350px;
     height: auto;
     font-size: 14px;
     font-weight: 400;
@@ -56,7 +57,7 @@ body {
     color: rgb(231, 231, 231);
 }
 
-.login-form__text-input {
+.register-form__text-input__nombre, .register-form__text-input__apellido, .register-form__text-input__correo-electronico, .register-form__text-input__contraseña {
     border-radius: 7px;
     border: 4px solid #636363;
     background: #D9D9D9;
