--- a/WebSite/Historial/style.css
+++ b/WebSite/Historial/style.css
@@ -4,6 +4,15 @@
     box-sizing: border-box;
 }
 
+.overlay{
+    position: absolute;
+    width: 100vw;
+    height: 100vw;
+    opacity: 0;
+    pointer-events: none;
+    z-index: 10; 
+    }
+
 body {
     background: rgb(54, 54, 54);
     overflow-x: hidden;
@@ -198,6 +207,7 @@ br{
 
 
 .input {
+    z-index: 15;
     display: flex;
     flex-direction: column;
     width: 200px;
@@ -266,6 +276,8 @@ width: 15px
     flex-direction: row;
     padding: 41px 100px 41px 100px;
     justify-content: space-between;
+    position: sticky;
+    bottom: 0;
 }
 
 .footer__links{
