--- a/WebSite/Register-Page/style.css
+++ b/WebSite/Register-Page/style.css
@@ -21,7 +21,7 @@ body {
     color: white
 }
 
-.login-form {
+.register-form {
     display: flex;
     width: 451px;
     height: auto;
@@ -34,19 +34,19 @@ body {
     box-shadow: -4px 4px 4px 0px rgba(0, 0, 0, 0.25); /* Parametros (son con respecto al objeto): Posicion Horizontal | Posicion Vertical | Difuminado | Expansion */
     justify-content: center;
 }
-.login-form__image {
+.register-form__image {
     width: 45px;
     height: 56px;
     filter: drop-shadow(0px 4px 1px rgba(0, 0, 0, 0.25));
     margin-top: 15px;
 }
 
-.login-form__h2 {
+.register-form__h2 {
     letter-spacing: 0.5px;
     margin-top: 16px;
 }
 
-.login-form__p {
+.register-form__p {
     width: 350px;
     height: auto;
     font-size: 14px;
@@ -94,11 +94,11 @@ body {
     margin-bottom: 10px;
 }
 
-.login-form__forgot-password:hover {
+.register-form__forgot-password:hover {
     transform: scale(1.02);
 }
 
-.login-form__button-container {
+.register-form__button-container {
     justify-content: space-between;
     align-items: center;
     display: flex;
@@ -107,17 +107,17 @@ body {
     padding: 35px;
 }
 
-.login-form__button {
+.register-form__button {
     font-size: 20px;
     line-height: 0.5px;
     letter-spacing: 1px;
 }
 
-.login-form__button:hover {
+.register-form__button:hover {
     transform: scale(1.05);
 }
 
-.login-form__button--submit {
+.register-form__button--submit {
     width: 115px;
     height: 37px;
     border-radius: 7px;
@@ -127,7 +127,7 @@ body {
     color: white;
 }
 
-.login-form__button--register {
+.register-form__button--register {
     color: #515151;
     text-align: center;
     background-color: transparent;
