--- a/WebSite/Delete-Account/style.css
+++ b/WebSite/Delete-Account/style.css
@@ -20,9 +20,9 @@ body {
     color: white
 }
 
-.login-form {
+.delete-account-form {
     width: 451px;
-    height: 503px;
+    height: auto;
     margin: auto;
     align-items: center;
     text-align: center;
@@ -33,30 +33,56 @@ body {
     box-shadow: -4px 4px 4px 0px rgba(0, 0, 0, 0.25); /* Parametros (son con respecto al objeto): Posicion Horizontal | Posicion Vertical | Difuminado | Expansion */
     justify-content: center;
 }
-.login-form__image {
+.delete-account__image {
     width: 45px;
     height: 56px;
     filter: drop-shadow(0px 4px 1px rgba(0, 0, 0, 0.25));
-    margin-top: 15px;
+    margin-top: 35px;
 }
 
-.login-form__h2 {
+.delete-account__h2 {
     letter-spacing: 0.5px;
     margin-top: 16px;
 }
 
-.login-form__p {
+.delete-account__p {
     width: auto;
     height: auto;
     font-size: 14px;
-    font-weight: 400;
+    font-weight: 600;
     letter-spacing: 0.8px;
     margin-top: 10px;
     margin-bottom: 15px;
-    color: rgb(231, 231, 231);
+    color: rgb(255, 0, 0);
 }
 
-.login-form__text-input {
+.delete-account__password{
+    margin: auto;
+    display: flex;
+
+}
+
+.boton{
+    display: flex;
+    justify-content: center;
+    flex-direction: column;
+    margin: 20px;
+}
+
+.delete-account__submit{
+    width: 200px;
+    height: 60px;
+    border-radius: 7px;
+    border: 3px solid rgb(255, 27, 27);
+    background:#6d6d6d;
+    box-shadow: -4px 4px 4px 0px rgba(97, 0, 0, 0.25);
+    color: rgb(255, 27, 27);
+    margin: 25px auto;
+    font-size: 18px;
+    font-weight: 500;
+}
+
+.delete-account__password{
     border-radius: 7px;
     border: 4px solid #636363;
     background: #D9D9D9;
@@ -70,56 +96,44 @@ body {
     color: #707070;
 }
 
-.login-form__text-input::placeholder {
+.delete-account__password::placeholder {
     font-size: 18px;
     color: #969696;
     font-weight: 400;
     letter-spacing: 1.2px;
 }
 
-.login-form__text-input:focus {
+.delete-account__password:focus {
     outline: none;
     border-color: #0EA0CE;
     box-shadow: none;
     color: #707070;
 }
 
-.login-form__button-container {
-    justify-content: space-between;
-    align-items: center;
+
+.delete-account__checkbox{
+    border-radius: 40px;
+    outline: 3px solid #636363;
+    background: #D9D9D9;
+    box-shadow: -2px 2px 2px 0px rgba(0, 0, 0, 0.25);
+    margin-top: 5px;
+    width: 1.6vw;
+    height: 1.6vw;
+}
+
+.delete-account__texto{
+    color: rgb(56, 56, 56);
+    font-size: 18px;
     display: flex;
-    height: 15%;
-    width: 100%;
-    padding: 35px;
+    align-items: center;
+    margin-top: 3%;
 }
 
-.login-form__button {
-    font-size: 20px;
-    line-height: 0.5px;
-    letter-spacing: 1px;
-}
-
-.login-form__button:hover {
-    transform: scale(1.05);
-}
-
-.login-form__button--submit {
-    width: 115px;
-    height: 37px;
-    border-radius: 7px;
-    border: 1px solid #3E3D3D;
-    background:#515151;
-    box-shadow: -4px 4px 4px 0px rgba(0, 0, 0, 0.25);
-    color: white;
-}
-
-.login-form__button--register {
-    color: #515151;
-    text-align: center;
-    background-color: transparent;
-    border-color: transparent;
-}
-
-a{
-    color: white;
+.boton__confirmar{
+    margin-top: 6%;
+    display: flex;
+    flex-direction: row;
+    justify-content: space-around;
+    padding: 0% 18%;
+    align-items: center;
 }
