--- a/WebSite/Historial/style.css
+++ b/WebSite/Historial/style.css
@@ -5,13 +5,13 @@
 }
 
 .overlay{
-    position: absolute;
+    position: fixed;
     width: 100vw;
     height: 100vw;
     opacity: 0;
     pointer-events: none;
     z-index: 10; 
-    }
+}
 
 body {
     background: rgb(54, 54, 54);
