--- a/WebSite/Register-Page/style.css
+++ b/WebSite/Register-Page/style.css
@@ -57,7 +57,7 @@ body {
     color: rgb(231, 231, 231);
 }
 
-.register-form__text-input__nombre, .register-form__text-input__apellido, .register-form__text-input__correo-electronico, .register-form__text-input__contraseña {
+.register-form__text-input{
     border-radius: 7px;
     border: 4px solid #636363;
     background: #D9D9D9;
@@ -71,14 +71,14 @@ body {
     color: #707070;
 }
 
-.login-form__text-input::placeholder {
+.register-form__text-input::placeholder {
     font-size: 18px;
     color: #969696;
     font-weight: 400;
     letter-spacing: 1.2px;
 }
 
-.login-form__text-input:focus {
+.register-form__text-input:focus {
     outline: none;
     border-color: #0EA0CE;
     box-shadow: none;
@@ -136,4 +136,15 @@ body {
 
 a{
     color: white;
+}
+
+#error{
+    width: 350px;
+    height: auto;
+    font-size: 16px;
+    font-weight: 400;
+    letter-spacing: 0.8px;
+    margin-top: 10px;
+    margin-bottom: 15px;
+    color: rgb(255, 0, 0);
 }
