--- a/WebSite/Login-Page/style.css
+++ b/WebSite/Login-Page/style.css
@@ -52,8 +52,17 @@ body {
     font-weight: 400;
     letter-spacing: 0.8px;
     margin-top: 10px;
-    margin-bottom: 15px;
+    margin-bottom: 10px;
     color: rgb(231, 231, 231);
+}
+
+.mensaje-de-error{
+    width: auto;
+    height: auto;
+    font-size: 16px;
+    font-weight: 400;
+    letter-spacing: 0.8px;
+    color: rgb(255, 0, 0);
 }
 
 .login-form__text-input {
