--- a/WebSite/Delete-Account/style.css
+++ b/WebSite/Delete-Account/style.css
@@ -82,6 +82,11 @@ body {
     font-weight: 500;
 }
 
+.delete-account__submit:hover{
+    background-color: #5f5f5f;
+    cursor: pointer;
+}
+
 .delete-account__password{
     border-radius: 7px;
     border: 4px solid #636363;
@@ -120,13 +125,18 @@ body {
     width: 1.6vw;
     height: 1.6vw;
 }
-
+.delete-account__checkbox:hover{
+    cursor: pointer;
+}
 .delete-account__texto{
     color: rgb(56, 56, 56);
     font-size: 18px;
     display: flex;
     align-items: center;
     margin-top: 3%;
+}
+.delete-account__texto:hover{
+    cursor: pointer;
 }
 
 .boton__confirmar{
